--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,6 @@
   command = "yarn build"
   publish = "public/"
   functions = "functions/"
+
+[context.production]
+  environment = { FAUNADB_ADMIN_SECRET = "fnAD38ges9ACBeHfAIL5BFbHA44p27mMSAVEWfTv"}
