--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "bootstrap": "^4.5.2",
     "gatsby": "^2.24.67",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "prettier": "2.1.2"
